Fix icon attribute syntax in index.html

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 description: "Our latest media collection - valid until 10.10.2025",
                 url: "https://drive.google.com/drive/folders/1DmPqVmwnkmaMT6miMUgODLIienrMIjJ4",
                 available: true,
-                icon: "src/media.png,
+                icon: "src/media.png",
                 ad: false,
                 highlight: false
             },
