Update URL to include HTTPS for Swadhesh ad

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             {
                 title: "Swadhesh - Online Indian Grocery",
                 description: "10% Discount - 'InOnam2025' - until 01.10",
-                url: "www.swadesh.eu",
+                url: "https://www.swadesh.eu",
                 available: true,
                 icon: "https://sendwithses-855401425151-1707894036997510955-us-east-1.s3.amazonaws.com/opensource/175796269963145375.png",
                 ad: true,
